# vistac_sdk

./: .gitignore  CMakeLists.txt  CRITICAL_REVIEW.md  PLAN.md  README.md  fix.md  force.md  package.xml  requirements.txt  setup.py
.github/workflows/: ci.yml
apps/: live_core.py  live_viewer.py
calibration/: README.md  collect_data.py  label_data.py  mm_to_ppmm.py  prepare_data.py  test_model.py  train_model.py  utils.py
digit_sdk/: __init__.py  camera.py  digit_device.py  digit_reconstruct.py  processing_engine.py  tactile_processor.py
models/: README.md
ros2/: camera_node.py  camera_shm.py  force_publisher.py  pipeline_node.py  process_node.py  raw_bridge_node.py  raw_publisher.py  surface_publisher.py  tactile_streamer_node.py
ros2/launch/: multi_sensor_tactile_streamer.launch.py  multi_sensor_tactile_streamer.launch.py.bak
ros2/urdf/: digit.xacro
ros2/urdf/meshes/: digit.stl
scripts/: download_models.py
sensors/D21119/: D21119.yaml
sensors/D21119/model/: nnmodel.pth
sensors/D21242/: D21242.yaml
sensors/D21242/model/: nnmodel.pth
sensors/D21273/: D21273.yaml
sensors/D21273/model/: nnmodel.pth
sensors/D21275/: D21275.yaml
sensors/D21275/model/: nnmodel.pth
test/: test_dct_equivalence.py
tests/: __init__.py  test_depth_estimator.py  test_force_estimator.py  test_tactile_processor.py  test_temporal_buffer.py  test_viz_utils.py
vistac_sdk/: __init__.py  live_core.py  processing_engine.py  tactile_processor.py  temporal_buffer.py  test_camera.py  utils.py  vistac_device.py  vistac_force.py  vistac_reconstruct.py  viz_utils.py
